--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 /* Paleta de cores */
 :root {
     --azul-hc: #0077b6;
@@ -13,10 +16,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
   }
   
   body {
-    font-family: var(--fonte-principal);
     background-color: var(--cinza-claro);
     color: var(--cinza-escuro);
     line-height: 1.6;
@@ -148,6 +151,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-top: 4%;
   }
   
   button:hover {
@@ -171,6 +175,7 @@
   }
   .faq h1 {
     text-align: center;
+    margin-bottom: 2%;
   }
   .ajuda h1 {
     text-align: center;
@@ -233,6 +238,7 @@
 #checklistForm {
     margin-bottom: 2%;
 }
+
 .contato h1 {
     text-align: center;
     margin-bottom: 3%;
@@ -244,7 +250,7 @@
 .solucao h1 {
     text-align: center;
     margin-bottom: 2%;
-    line-height: 250%;
+    line-height: 150%;
     
 }
 .solucao p {
