--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,26 @@
       align-items: center;
     }
   }
+  .botao-ajuda {
+  display: inline-block;
+  background-color: var(--azul-hc);
+  color: var(--branco);
+  padding: 0.75rem 1.5rem;
+  border-radius: 8px;
+  font-size: 1rem;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.galeria-botao {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+ .botao-ajuda:hover {
+    background-color: var(--verde-hc);
+  }
+  
   
   @media (min-width: 600px) {}
   
