--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,35 @@
  .botao-ajuda:hover {
     background-color: var(--verde-hc);
   }
+
+ .videos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.video-item {
+  background-color: var(--branco);
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  text-align: center;
+}
+
+/* container que controla a altura de visualização inicial */
+.video-thumb {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.video-thumb video {
+  width: 100%;
+  height: auto;
+}
   
   
   @media (min-width: 600px) {}
