--- a/css/styles.css
+++ b/css/styles.css
@@ -315,36 +315,31 @@
     background-color: var(--verde-hc);
   }
 
- .videos {
+ /* Galeria */
+.galeria {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.videos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   margin-top: 2rem;
 }
 
-.video-item {
-  background-color: var(--branco);
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-  overflow: hidden;
-  text-align: center;
+.video-item h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  color: var(--azul-hc);
 }
 
-/* container que controla a altura de visualização inicial */
-.video-thumb {
+.video-item video {
   width: 100%;
-  height: 200px;
-  overflow: hidden;
   border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
-.video-thumb video {
-  width: 100%;
-  height: auto;
-}
-  
-  
   @media (min-width: 600px) {}
   
   @media (min-width: 768px) {}
