--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,74 @@
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+   .botao-container {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 50px;
+    }
+
+    .botao-app {
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #000;
+      color: #fff;
+      border-radius: 10px;
+      text-decoration: none;
+      font-family: sans-serif;
+      font-weight: bold;
+      transition: transform 0.2s;
+    }
+
+    .botao-app:hover {
+      transform: scale(1.05);
+    }
+
+    .botao-app img {
+      height: 30px;
+      margin-right: 10px;
+    }
+
+      .app-download {
+    text-align: center;
+    background-color: #f4f4f4;
+    padding: 40px 20px;
+    margin-top: 40px;
+  }
+
+  .app-download h2 {
+    font-size: 1.8em;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #0077b6;
+  }
+
+  .app-download p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: #555;
+  }
+
+  .store-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .store-buttons img {
+    height: 60px;
+    object-fit: contain;
+    transition: transform 0.2s ease;
+  }
+
+  .store-buttons img:hover {
+    transform: scale(1.05);
+  }
+
+    
   @media (min-width: 600px) {}
   
   @media (min-width: 768px) {}
