Alteração da barra de navegação

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,7 @@
 .botao-ajuda{
     color: white;
     text-decoration: none;
+    margin-right: 15%;
 }
 .checklist h1 {
     text-align: center;
